fixed left menu bottom spacing issue

--- a/public/bootstrap/less/troupe-menu/troupe-menu.less
+++ b/public/bootstrap/less/troupe-menu/troupe-menu.less
@@ -29,7 +29,6 @@
 	padding-left: 20px;
 	overflow-y: auto;
 	overflow-x: hidden;
-	height: 90%;
 }
 
 .trpLeftMenuToolbar {
